Changelog
=========

- 2.4.1
    - Fixing recoverable errors

- 2.4.0
    - Retain the value of a MODX TV as source image for the Image+ TV
    - Fill output chunk placeholders with script properties
    - Improved error logging
    - Resolved issues with apostrophes in language strings

- 2.3.4
    - Open crop window automatic after selecting a new image
    - Bugfix for media source issue in MIGX

- 2.3.3
    - Run jQuery in noConflict mode

- 2.3.2
    - Added 'value' parameter in the ImagePlus Snippet

- 2.3.1
    - Use default_media_source if the media source of the TV is not set (i.e. if it used in a MIGX configuration)
    - Enable property sets for the ImagePlus Snippet
    - Don't show the crop window if the image size is invalid

- 2.3.0
    - MODX 2.3 compatibility
    - Inline Trigger fields
    - Bugfix for fireResourceFormChange issue
    - Some better backend styling
    - Updated Jcrop plugin and jQuery
    - Set thumbnail width in template variable panel
    - Set crop aspect ratio in template variable input options
    - Bugfix for a Firefox display issue
    - Respect context settings for media sources
    - Center the crop window in the viewport
    - Updated Czech translation (@bartholomej)
    - Updated Dutch translation (@Mark-H)
    - Updated French translation (@AmaZili)
    - Updated Russian translation (@Alroniks, serimarda)

- 2.2.x
    - Added GUI warning of missing dependencies
    - Added PhpThumbsUp crop engine
    - Refactored to allow changing of crop engines
    - Added grid renderer for MIGX backend
    - Confirmed to work with Articles [#21]
    - Now works with MIGX [#15]
    - TV Default Value is now output if TV is empty
    - TV Reset button now works [#22]
    - Added image preloader to accurately get image size on upload.
    - This is because MODX File Manager will not report accurate
      image size for images above 800x600 [#8]
    - Added option to put an icon on TV input 'crop' button. [#16]