@@ -1,7 +1,5 @@
 <?php
-
 $_lang['imageplus'] = 'Image+';
-
 
 $_lang['imageplus.editor_title'] = 'Image+ Editor';
 $_lang['imageplus.edit_image'] = 'Bild bearbeiten';
@@ -41,3 +39,8 @@ $_lang['imageplus.placeholder.crop.x'] = 'Crop-X-Startposition des Originalbilds
 $_lang['imageplus.placeholder.crop.y'] = 'Crop-Y-Startposition des Originalbilds';
 $_lang['imageplus.placeholder.options'] = 'phpThumb Optionen für das Thumbnail';
 $_lang['imageplus.placeholder.crop.options'] = 'phpThumb Crop Optionen für das Thumbnail';
+
+$_lang['imageplus.error.image_too_small.title'] = 'Bild ist zu klein';
+$_lang['imageplus.error.image_too_small.msg'] = 'Das gewählte Bild ist zu klein um benutzt zu werden. Bitte wählen Sie ein anderes Bild.';
+$_lang['imageplus.error.image_not_found.title'] = 'Bild nicht gefunden';
+$_lang['imageplus.error.image_not_found.msg'] = 'Das Bild wurde nicht gefunden und kann nicht zugeschnitten werden. Bitte wählen Sie ein anderes Bild.';
